[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Objects/Bags/bag.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Poppins-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/Objects/Bags/Bag.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 56, 28 )

[sub_resource type="DynamicFont" id=3]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="Bag" type="AnimatedSprite"]
frames = SubResource( 1 )
script = ExtResource( 3 )

[node name="Interaction_hitbox" type="Area2D" parent="." groups=["interactable"]]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction_hitbox"]
position = Vector2( 0, 20 )
shape = SubResource( 2 )

[node name="Interaction_timer" type="Timer" parent="."]
one_shot = true

[node name="Interaction_panel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -176.0
margin_top = -184.0
margin_right = 48.0
margin_bottom = -64.0

[node name="VBoxContainer" type="VBoxContainer" parent="Interaction_panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 217.0
margin_bottom = 113.0

[node name="Title" type="Label" parent="Interaction_panel/VBoxContainer"]
margin_right = 210.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 3 )
text = "Bag"
align = 1

[node name="Action1" type="Label" parent="Interaction_panel/VBoxContainer"]
margin_top = 50.0
margin_right = 210.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 4 )
text = "Hold [F] to Carry"
align = 1

[node name="Action2" type="Label" parent="Interaction_panel/VBoxContainer"]
visible = false
margin_top = 77.0
margin_right = 210.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 4 )
text = "Hold [X] to Take Disguise"
align = 1

[node name="Interaction_progress" type="ProgressBar" parent="Interaction_panel/VBoxContainer"]
margin_top = 77.0
margin_right = 210.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 5 )
step = 1.0
rounded = true

[connection signal="timeout" from="Interaction_timer" to="." method="_on_Interaction_timer_timeout"]
